[project]
name = "dl-a2"
version = "0.1.0"
description = "Deep Learning - Assignment 2 - Transformers Assemble Group"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "torch>=2.12.0",
    "torch-geometric>=2.8.0",
    "torchvision>=0.27.0",
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }
